add layout login

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #4b803e
+$primary   : #113572
 $secondary : #79a567
 $accent    : #9C27B0
 $font      : #3f3f3f
