--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,10 +12,11 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #113572
-$secondary : #79a567
-$accent    : #9C27B0
-$font      : #3f3f3f
+$primary    : #003F63
+$secondary  : #F2C037
+
+$accent     : #D9D9D9
+$font       : #353D40
 
 $white     : #FFFFFF
 $dark      : #1D1D1D
